[gd_scene load_steps=6 format=2]

[ext_resource path="res://scenes/objects/Bullet/Bullet.gd" type="Script" id=1]
[ext_resource path="res://scenes/objects/Bullet/NetSyncBullet.gd" type="Script" id=2]

[sub_resource type="SphereShape" id=1]
radius = 0.25

[sub_resource type="SpatialMaterial" id=2]
albedo_color = Color( 0.266667, 0.223529, 0.223529, 1 )
metallic = 1.0
roughness = 0.46

[sub_resource type="SphereMesh" id=3]
radius = 0.25
height = 0.5
radial_segments = 16
rings = 16

[node name="CannonBullet" type="RigidBody"]
input_ray_pickable = false
continuous_cd = true
contact_monitor = true
script = ExtResource( 1 )

[node name="CollisionShape" type="CollisionShape" parent="."]
shape = SubResource( 1 )

[node name="MeshInstance" type="MeshInstance" parent="."]
material_override = SubResource( 2 )
mesh = SubResource( 3 )
material/0 = null

[node name="NetSyncBullet" type="Node" parent="."]
script = ExtResource( 2 )

[node name="Timer" type="Timer" parent="NetSyncBullet"]
wait_time = 0.1
autostart = true

[node name="LifeTimer" type="Timer" parent="."]
wait_time = 60.0
one_shot = true
autostart = true

[connection signal="body_entered" from="." to="." method="_on_Bullet_body_entered"]
[connection signal="timeout" from="NetSyncBullet/Timer" to="NetSyncBullet" method="sync_node_emission"]
[connection signal="timeout" from="LifeTimer" to="." method="_on_LifeTimer_timeout"]
